feat: 实现基础路由和布局框架
添加 TanStack Router 配置和基础路由结构
创建 BasicLayout 布局组件和菜单配置
移除未使用的 CSS 文件并添加 LESS 支持
配置路径别名和类型定义

--- a/app/web-repo/package.json
+++ b/app/web-repo/package.json
@@ -8,5 +8,8 @@
     "dev": "rsbuild dev --open",
     "preview": "rsbuild preview",
     "format": "biome format --write"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.21"
   }
 }
