--- a/app/web-repo/tsconfig.json
+++ b/app/web-repo/tsconfig.json
@@ -17,7 +17,11 @@
     /* type checking */
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "paths": {
+      "@@/*": ["../../src/*"],
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"]
 }
