chore(vercel): 更新vercel配置文件以适配v2版本
将vercel.json配置从旧版重定向格式迁移到v2版本格式，使用builds和routes配置替代原来的redirects

--- a/app/web-repo/vercel.json
+++ b/app/web-repo/vercel.json
@@ -1,9 +1,14 @@
 {
-  "redirects": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/:path*",
-      "destination": "/",
-      "permanent": true
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
